Adicionado incrementos e correções

--- a/main.tex
+++ b/main.tex
@@ -43,9 +43,17 @@
 \lstdefinelanguage{qml} {
 	morekeywords={Item, Component, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError},
 	keywordstyle=\color{red},
-	showstringspaces=false,
-	basicstyle=\small
+	showstringspaces=true,
+	basicstyle=\small,
+	morestring=[b]",
+	commentstyle=\color{blue},
+	frame=trBL,
+	numbers=left,
+	numberstyle=\tiny,
+	stepnumber=1,
+	tabsize=4,
 }
+
 
 \renewcommand{\lstlistingname}{Algoritmo}
 
