Adicionado incrementos e melhorias

--- a/main.tex
+++ b/main.tex
@@ -41,16 +41,16 @@
 
 % add sintax highlight to qml code
 \lstdefinelanguage{qml} {
-	morekeywords={Item, Component, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError, Database, id, jsonColumns, tableName, pkColumn, onItemLoaded, text, Label, Image, Column, spacing},
+	morekeywords={Item, property, Component, Components, onCompleted, var, Connections, target, onEventNotify, if, else, RequestHttp, import, baseUrl, basicAuthorizationUser, basicAuthorizationPassword, onError, Database, id, jsonColumns, tableName, pkColumn, onItemLoaded, text, Label, Image, Column, spacing},
 	keywordstyle=\color{red},
 	showstringspaces=true,
 	basicstyle=\small,
 	morestring=[b]",
 	commentstyle=\color{blue},
 	frame=trBL,
-	numbers=left,
-	numberstyle=\tiny,
-	stepnumber=1,
+	%numbers=left,
+	%numberstyle=\tiny,
+	%stepnumber=1,
 	tabsize=4,
 }
 
